--- a/win_svc/ActionHandlerService/ActionHandlerService.csproj
+++ b/win_svc/ActionHandlerService/ActionHandlerService.csproj
@@ -60,6 +60,9 @@
       <HintPath>..\..\packages\log4net.2.0.8\lib\net45-full\log4net.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="MailBee.NET.4">
+      <HintPath>..\..\Libraries\MailBee\MailBee.NET.4.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Newtonsoft.Json.8.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
@@ -103,6 +106,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Helpers\ActionsParser.cs" />
+    <Compile Include="MessageHandlers\Notifications\EmailSettingsRetriever.cs" />
+    <Compile Include="MessageHandlers\Notifications\SmtpClient.cs" />
     <Compile Include="MessageHandlers\PropertyChange\PropertyChangeMessageHandler.cs" />
     <Compile Include="MessageHandlers\PropertyChange\PropertyChangeActionHelper.cs" />
     <Compile Include="MessageHandlers\StateTransition\StateTransitionMessageHandler.cs" />
