--- a/win_svc/BluePrintSys.Messaging.Models.Action/BluePrintSys.Messaging.Models.Actions.csproj
+++ b/win_svc/BluePrintSys.Messaging.Models.Action/BluePrintSys.Messaging.Models.Actions.csproj
@@ -80,6 +80,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\svc\lib\ServiceLibrary\ServiceLibrary.csproj">
+      <Project>{42662DE2-4604-427C-91F9-5F47AF8F1E1B}</Project>
+      <Name>ServiceLibrary</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
