DEV-1733: Added a validation the workflow xml against xml schema.

--- a/svc/AdminStore/AdminStore.csproj
+++ b/svc/AdminStore/AdminStore.csproj
@@ -251,6 +251,9 @@
     <Content Include="doc\AdminStore Web Service API - Swagger.URL" />
     <Content Include="doc\AdminStore Web Service API.docx" />
     <Compile Include="Controllers\JobsController.ProcessTestGeneration.cs" />
+    <EmbeddedResource Include="Models\Workflow\IeWorkflow.xsd">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
