--- a/svc/ArtifactStore/ArtifactStore.csproj
+++ b/svc/ArtifactStore/ArtifactStore.csproj
@@ -109,7 +109,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Helpers\Validators\IPropertyValidator.cs" />
+    <Compile Include="Helpers\DecimalHelper.cs" />
     <Compile Include="Helpers\MentionHelper.cs" />
     <Compile Include="Helpers\SensitivityCommonHelper.cs" />
     <Compile Include="Models\Review\ParticipantArtifactStats.cs" />
@@ -209,7 +209,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\Workflow\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\lib\HtmlLibrary\HtmlLibrary.csproj">
