DEV-1991 Implementing SQL Server Transport for the Action Handler Service

--- a/win_svc/ActionHandlerService/App.config
+++ b/win_svc/ActionHandlerService/App.config
@@ -41,7 +41,10 @@
   <appSettings>
     <add key="Service.Name" value="BlueprintActionHandler" />
     <add key="MessageProcessing.MaxConcurrency" value="1" />
+
     <add key="NServiceBus.ConnectionString" value="host=titan.blueprintsys.net;virtualhost=workflowtest;username=admin;password=$admin2011" />
+    <!--<add key="NServiceBus.ConnectionString" value="Data Source=BlueprintDevDB;Initial Catalog=Raptor;Integrated Security=True;Max Pool Size=80" />-->
+
     <add key="CacheExpirationMinutes" value="1440" />
 
     <!-- Sepecifies whether service works as a single tenant provider or as a multiple tenant provider. Default value is "Single" -->
@@ -49,12 +52,6 @@
     <!-- Single -->
     <!-- Multiple -->
     <add key="Tenancy" value="Single" />
-
-    <!-- Specifies whether the service works with RabbitMQ or SQL message brokers. Default value is "RabbitMQ" -->
-    <!-- Supported values -->
-    <!-- RabbitMQ -->
-    <!-- SQL -->
-    <add key="MessageBroker" value="RabbitMQ" />
 
     <!-- Specifies the list of supported action types. Default value is "All". We can also specify multiple types e.g., Property,Notification -->
     <!-- The list should be in a comma separated format. -->
