--- a/win_svc/ActionHandlerService/App.config
+++ b/win_svc/ActionHandlerService/App.config
@@ -43,6 +43,7 @@
     <add key="MessageProcessing.MaxConcurrency" value="1" />
 
     <add key="NServiceBus.ConnectionString" value="host=titan.blueprintsys.net;virtualhost=workflowtest;username=admin;password=$admin2011" />
+    <!--Connection string for SQL Server transport-->
     <!--<add key="NServiceBus.ConnectionString" value="Data Source=BlueprintDevDB;Initial Catalog=Raptor;Integrated Security=True;Max Pool Size=80" />-->
 
     <add key="CacheExpirationMinutes" value="1440" />
