DEV-1277 WebAPI code and Tests

--- a/svc/AdminStore/AdminStore.csproj
+++ b/svc/AdminStore/AdminStore.csproj
@@ -133,6 +133,7 @@
     <Compile Include="Models\DeleteResult.cs" />
     <Compile Include="Models\GroupUser.cs" />
     <Compile Include="Models\DTO\ProjectDto.cs" />
+    <Compile Include="Models\ProjectRole.cs" />
     <Compile Include="Models\QueryDataResult.cs" />
     <Compile Include="Models\SqlUser.cs" />
     <Compile Include="Models\TabularData.cs" />
