DEV-1991 workflow now uses the same connection string as image gen

--- a/win_svc/ActionHandlerService/App.config
+++ b/win_svc/ActionHandlerService/App.config
@@ -42,7 +42,8 @@
     <add key="Service.Name" value="BlueprintActionHandler" />
     <add key="MessageProcessing.MaxConcurrency" value="1" />
 
-    <add key="NServiceBus.ConnectionString" value="host=titan.blueprintsys.net;virtualhost=workflowtest;username=admin;password=$admin2011" />
+    <!--Connection string for RabbitMQ transport-->
+    <add key="NServiceBus.ConnectionString" value="host=titan.blueprintsys.net;virtualhost=test;username=admin;password=$admin2011" />
     <!--Connection string for SQL Server transport-->
     <!--<add key="NServiceBus.ConnectionString" value="Data Source=BlueprintDevDB;Initial Catalog=Raptor;Integrated Security=True;Max Pool Size=80" />-->
 
