--- a/win_svc/ActionHandlerServiceTests/ActionHandlerServiceTests.csproj
+++ b/win_svc/ActionHandlerServiceTests/ActionHandlerServiceTests.csproj
@@ -109,6 +109,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="ActionsParserTests.cs" />
     <Compile Include="ConfigHelperTests.cs" />
     <Compile Include="PropertyChangeActionHelperTests.cs" />
     <Compile Include="StateTransitionActionHelperTests.cs" />
