--- a/svc/AdminStore/AdminStore.csproj
+++ b/svc/AdminStore/AdminStore.csproj
@@ -253,6 +253,7 @@
     <Compile Include="Services\Workflow\ITriggerConverter.cs" />
     <Compile Include="Services\Workflow\IWorkflowActionPropertyValueValidator.cs" />
     <Compile Include="Services\Workflow\IWorkflowDataValidator.cs" />
+    <Compile Include="Services\Workflow\IWorkflowDiff.cs" />
     <Compile Include="Services\Workflow\IWorkflowService.cs" />
     <Compile Include="Services\Workflow\IWorkflowValidationErrorBuilder.cs" />
     <Compile Include="Services\Workflow\IWorkflowXmlValidator.cs" />
@@ -260,6 +261,7 @@
     <Compile Include="Services\Workflow\WorkflowActionPropertyValueValidator.cs" />
     <Compile Include="Services\Workflow\WorkflowDataValidationResult.cs" />
     <Compile Include="Services\Workflow\WorkflowDataValidator.cs" />
+    <Compile Include="Services\Workflow\WorkflowDiff.cs" />
     <Compile Include="Services\Workflow\WorkflowService.cs" />
     <Compile Include="Services\Workflow\WorkflowValidationErrorBuilder.cs" />
     <Compile Include="Services\Workflow\WorkflowXmlValidationResult.cs" />
