dev-2131 fixing issues with queuing a new job

--- a/win_svc/ActionHandlerService/App.config
+++ b/win_svc/ActionHandlerService/App.config
@@ -8,6 +8,7 @@
     <add name="TenantsDatabase" providerName="System.Data.SqlClient" connectionString="data source=nw.blueprintsys.net;initial catalog=BlueprintNova;user id=sa;password=$Admin99;integrated security=false;min pool size=4;max pool size=128;load balance timeout=2;packet size=16384;connectretrycount=3;connectretryinterval=3;MultipleActiveResultSets=True;" />
     <!-- The following TenantsDatabase connection string is currently unused, but should not be removed as it will be used in future for retrieving tenant information-->
     <!--<add name="TenantsDatabase" providerName="System.Data.SqlClient" connectionString="data source=BlueprintDevDB;initial catalog=Raptor;integrated security=True;min pool size=4;max pool size=128;load balance timeout=2;packet size=16384;connectretrycount=3;connectretryinterval=3;MultipleActiveResultSets=True;" />-->
+    <add name="RaptorMain" providerName="System.Data.SqlClient" connectionString="data source=BlueprintDevDB;initial catalog=Raptor;integrated security=True;min pool size=4;max pool size=128;load balance timeout=2;packet size=16384;connectretrycount=3;connectretryinterval=3;MultipleActiveResultSets=True;" />
   </connectionStrings>
   <log4net>
     <root>
