--- a/svc/lib/ServiceLibrary/ServiceLibrary.csproj
+++ b/svc/lib/ServiceLibrary/ServiceLibrary.csproj
@@ -176,6 +176,7 @@
     <Compile Include="Models\Enums\ActionType.cs" />
     <Compile Include="Models\Enums\ElementType.cs" />
     <Compile Include="Models\Enums\GenerateActionTypes.cs" />
+    <Compile Include="Models\Enums\ProcessType.cs" />
     <Compile Include="Models\Enums\SendEmailResult.cs" />
     <Compile Include="Models\Enums\TransitionType.cs" />
     <Compile Include="Models\Enums\WorkflowActionType.cs" />
@@ -215,6 +216,7 @@
     <Compile Include="Models\Pagination.cs" />
     <Compile Include="Models\PaginationExtensions.cs" />
     <Compile Include="Models\PermissionsItem.cs" />
+    <Compile Include="Models\ProcessInfo.cs" />
     <Compile Include="Models\ProjectAdminPrivileges.cs" />
     <Compile Include="Models\ProjectMeta\ApprovalType.cs" />
     <Compile Include="Models\ProjectMeta\ItemType.cs" />
