DEV-546 Enforcing Date Property Change Triggers

--- a/svc/ArtifactStore/ArtifactStore.csproj
+++ b/svc/ArtifactStore/ArtifactStore.csproj
@@ -127,8 +127,10 @@
     </Compile>
     <Compile Include="Helpers\MentionHelper.cs" />
     <Compile Include="Helpers\SensitivityCommonHelper.cs" />
+    <Compile Include="Helpers\Validators\DatePropertyValidator.cs" />
     <Compile Include="Helpers\Validators\NumberPropertyValidator.cs" />
     <Compile Include="Helpers\Validators\PropertyValidator.cs" />
+    <Compile Include="Models\PropertyTypes\DDatePropertyType.cs" />
     <Compile Include="Models\PropertyTypes\DNumberPropertyType.cs" />
     <Compile Include="Models\Review\ParticipantArtifactStats.cs" />
     <Compile Include="Models\Reuse\ReconcileProperty.cs" />
