DEV-546 unit tests for the Date Property Validator

--- a/svc/ArtifactStore.Tests/ArtifactStore.Tests.csproj
+++ b/svc/ArtifactStore.Tests/ArtifactStore.Tests.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Helpers\MentionHelperTests.cs" />
     <Compile Include="Helpers\SensitivityCommonHelperTests.cs" />
     <Compile Include="Helpers\ReuseSystemPropertiesMapTests.cs" />
+    <Compile Include="Helpers\Validators\DatePropertyValidatorTests.cs" />
     <Compile Include="Helpers\Validators\NumberPropertyValidatorTests.cs" />
     <Compile Include="Models\Workflow\Actions\PropertyChangeActionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
