--- a/svc/ArtifactStore/ArtifactStore.csproj
+++ b/svc/ArtifactStore/ArtifactStore.csproj
@@ -122,17 +122,13 @@
     <Compile Include="Controllers\StatusController.cs" />
     <Compile Include="Controllers\VersionControlController.cs" />
     <Compile Include="Controllers\WorkflowController.cs" />
+    <Compile Include="Executors\IStateChangeExecutorRepositories.cs" />
     <Compile Include="Executors\StateChangeExecutorRepositories.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Helpers\MentionHelper.cs" />
     <Compile Include="Helpers\SensitivityCommonHelper.cs" />
-    <Compile Include="Helpers\Validators\DatePropertyValidator.cs" />
-    <Compile Include="Helpers\Validators\NumberPropertyValidator.cs" />
-    <Compile Include="Helpers\Validators\PropertyValidator.cs" />
-    <Compile Include="Models\PropertyTypes\DDatePropertyType.cs" />
-    <Compile Include="Models\PropertyTypes\DNumberPropertyType.cs" />
     <Compile Include="Models\Review\ParticipantArtifactStats.cs" />
     <Compile Include="Models\Reuse\ReconcileProperty.cs" />
     <Compile Include="Models\Reuse\ReuseSensitivityCollector.cs" />
@@ -181,15 +177,8 @@
     <Compile Include="Models\Review\ReviewType.cs" />
     <Compile Include="Models\Review\SimulationSettings.cs" />
     <Compile Include="Models\Review\ViewStateType.cs" />
-    <Compile Include="Models\VersionControlArtifactInfo.cs" />
-    <Compile Include="Models\Workflow\Actions\PropertyChangeAction.cs" />
-    <Compile Include="Models\Workflow\ExecutionParameters.cs" />
-    <Compile Include="Models\Workflow\IWorkflowEvent.cs" />
-    <Compile Include="Models\Workflow\WorkflowEventCondition.cs" />
-    <Compile Include="Models\Workflow\WorkflowEventTrigger.cs" />
-    <Compile Include="Models\Workflow\WorkflowEventTriggers.cs" />
-    <Compile Include="Models\Workflow\WorkflowTransition.cs" />
-    <Compile Include="Models\Workflow\WorkflowTransitionResult.cs" />
+    <Compile Include="Models\Workflow\PostopWorkflowEventTriggers.cs" />
+    <Compile Include="Models\Workflow\PreopWorkflowEventTriggers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\IRelationshipsRepository.cs" />
     <Compile Include="Repositories\IAttachmentsRepository.cs" />
@@ -239,6 +228,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Helpers\Validators\" />
+    <Folder Include="Models\PropertyTypes\" />
+    <Folder Include="Models\Workflow\Actions\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\win_svc\BluePrintSys.Messaging.CrossCutting\BluePrintSys.Messaging.CrossCutting.csproj">
