--- a/svc/lib/ServiceLibrary/ServiceLibrary.csproj
+++ b/svc/lib/ServiceLibrary/ServiceLibrary.csproj
@@ -235,9 +235,14 @@
     <Compile Include="Models\ProjectMeta\PropertyTypePredefinedExtension.cs" />
     <Compile Include="Models\ProjectNameIdPair.cs" />
     <Compile Include="Models\ProjectPermissions.cs" />
+    <Compile Include="Models\PropertyType\DatePropertyValidator.cs" />
+    <Compile Include="Models\PropertyType\DDatePropertyType.cs" />
+    <Compile Include="Models\PropertyType\DNumberPropertyType.cs" />
     <Compile Include="Models\PropertyType\DPropertyType.cs" />
+    <Compile Include="Models\PropertyType\NumberPropertyValidator.cs" />
     <Compile Include="Models\PropertyType\PropertyLite.cs" />
     <Compile Include="Models\PropertyType\PropertySetResult.cs" />
+    <Compile Include="Models\PropertyType\PropertyValidator.cs" />
     <Compile Include="Models\PropertyType\SqlPropertyType.cs" />
     <Compile Include="Models\QueryResult.cs" />
     <Compile Include="Models\QuerySingleResult.cs" />
@@ -260,6 +265,7 @@
     <Compile Include="Models\SubArtifact.cs" />
     <Compile Include="Models\UserGroup.cs" />
     <Compile Include="Models\UserInfo.cs" />
+    <Compile Include="Models\VersionControl\ISaveArtifactRepository.cs" />
     <Compile Include="Models\VersionControl\PublishParameters.cs" />
     <Compile Include="Models\VersionControl\SqlDiscardPublishDetails.cs" />
     <Compile Include="Models\VersionControl\SqlDiscardPublishDetailsResult.cs" />
@@ -268,9 +274,26 @@
     <Compile Include="Models\VersionControl\SqlItemInfo.cs" />
     <Compile Include="Models\VersionControl\SqlJournalEntry.cs" />
     <Compile Include="Models\VersionControl\SqlPublishResult.cs" />
+    <Compile Include="Models\VersionControl\VersionControlArtifactInfo.cs" />
+    <Compile Include="Models\Workflow\ActionUserGroups.cs" />
+    <Compile Include="Models\Workflow\ExecutionParameters.cs" />
+    <Compile Include="Models\Workflow\IExecutionParameters.cs" />
+    <Compile Include="Models\Workflow\IPropertyChangeAction.cs" />
+    <Compile Include="Models\Workflow\IWorkflowEvent.cs" />
+    <Compile Include="Models\Workflow\IWorkflowEventASynchronousAction.cs" />
+    <Compile Include="Models\Workflow\IWorkflowEventSynchronousAction.cs" />
+    <Compile Include="Models\Workflow\SqlWorkflowTransition.cs" />
     <Compile Include="Models\Workflow\WorkflowConstants.cs" />
+    <Compile Include="Models\Workflow\WorkflowEventAction.cs" />
+    <Compile Include="Models\Workflow\WorkflowEventCondition.cs" />
+    <Compile Include="Models\Workflow\WorkflowEventSynchronousWorkflowEventAction.cs" />
+    <Compile Include="Models\Workflow\WorkflowEventTrigger.cs" />
+    <Compile Include="Models\Workflow\WorkflowEventTriggers.cs" />
     <Compile Include="Models\Workflow\WorkflowState.cs" />
     <Compile Include="Models\Workflow\WorkflowStateChangeParameter.cs" />
+    <Compile Include="Models\Workflow\WorkflowTransition.cs" />
+    <Compile Include="Models\Workflow\WorkflowTransitionResult.cs" />
+    <Compile Include="Models\Workflow\WorkflowTriggersContainer.cs" />
     <Compile Include="Models\Workflow\XmlAction.cs" />
     <Compile Include="Models\Workflow\XmlCondition.cs" />
     <Compile Include="Models\Workflow\XmlEmailNotificationAction.cs" />
